Update template to camera package

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = pupil_labs_project_name
+name = camera
 description = Project description
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-url = https://github.com/pupil-labs/python-module-skeleton
+url = https://github.com/pupil-labs/camera
 author = Pupil Labs GmbH
 author_email = info@pupil-labs.com
 license = MIT
