Add camera abstract base class

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,9 @@ python_requires = >=3.7
 include_package_data = true
 package_dir =
     =src
+install_requires =
+    numpy
+    nptyping
 
 [options.packages.find]
 where = src
