Fix package name to avoid PyPI name colision

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = camera
+name = pupil-labs-camera
 description = Project description
 long_description = file: README.rst
 long_description_content_type = text/x-rst
