Extract opencv dependency into extra install requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,6 @@ packages = find_namespace:
 install_requires =
     nptyping
     numpy
-    opencv-python
 python_requires = >=3.7
 include_package_data = true
 package_dir =
@@ -39,6 +38,8 @@ exclude =
     tests*
 
 [options.extras_require]
+with-opencv=
+    opencv-python
 docs =
     jaraco.packaging>=8.2
     rst.linker>=1.9
