Include opencv-python as dependency for testing with tox

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,9 @@ toxworkdir={env:TOX_WORK_DIR:.tox}
 
 
 [testenv]
-deps = pytest
+deps =
+	pytest
+    opencv-python
 commands =
 	pytest tests {posargs}
 usedevelop = True
