Restructure camera backends

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ classifiers =
 [options]
 packages = find_namespace:
 install_requires =
+    mpmath
     nptyping
     numpy
 python_requires = >=3.7
