--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ toxworkdir={env:TOX_WORK_DIR:.tox}
 deps =
 	pytest
     opencv-python
+	scipy
 commands =
 	pytest tests {posargs}
 usedevelop = True
