--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ docs =
     rst.linker>=1.9
     sphinx
 testing =
+    flake8<4
     pytest>=6
     pytest-black>=0.3.7
     pytest-checkdocs>=2.4
