--- a/setup.cfg
+++ b/setup.cfg
@@ -44,11 +44,13 @@ docs =
     rst.linker>=1.9
     sphinx<4.4  # 4.4 does not detect TypeVars correctly
 testing =
+    opencv-python
     pytest>=6
     pytest-black>=0.3.7
     pytest-checkdocs>=2.4
     pytest-cov
     pytest-enabler>=1.0.1
     pytest-mypy
+    scipy
 with_opencv =
     opencv-python
