--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     mpmath
     nptyping
     numpy
+    typing-extensions>=3.10.0
 python_requires = >=3.7
 include_package_data = true
 package_dir =
